--- a/style.css
+++ b/style.css
@@ -101,3 +101,8 @@ p {
   font-size: 70px;
   margin-left: 20%;
 }
+#bambo {
+  border-left: 5px solid rgb(177, 75, 75);
+  padding-left: 10px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
